# nlp

./: .gitignore  bio_bert.py  hf_token_classification.ipynb  pyproject.toml  requirements.txt
common/: check_cuda.py  chunker.py  labels.py  pipeline.py
common/finetune/: roberta.py  train.py
data/: org-annotate.csv
drug_extraction/: check_data.py
hf_token_class/: data.py  finetune.py  pipeline.py  roberta_multi_token.py
mvp1/spancat/: config.cfg  preprocess.py
mvp1/spancat/train/: train.spacy
mvp1/spancat_hf/: finetune.py  prepreocess.py  roberta_multi_token.py
projects/bio_bert/: bio_bert.py
projects/drug_extraction/: check_data.py
projects/hf_token_class/: data.py  finetune.py
projects/mvp1/data/: twenty_annotations_dataset_single_rows.csv
projects/mvp1/spancat/: predict.py
tests/: test_pipeline.py
